--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,5 +1,7 @@
 .Layout {
   text-align: left;
+  position: relative;
+  overflow: hidden;
 }
 
 .main {
@@ -14,5 +16,11 @@
   margin-top: 2.5vw;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   font-weight: 400;
+}
+
+@media (width <= 500px) {
+  .page {
+    width: 100%;
+  }
 }
 
